fix(FF-8536): fix first long tag is now visible

--- a/packages/tag/src/helperComponents/TagList/styles.module.scss
+++ b/packages/tag/src/helperComponents/TagList/styles.module.scss
@@ -1,3 +1,4 @@
 .tagWrapper {
+  min-width: 0;
   max-width: 100%;
 }
