--- a/packages/tag/src/helperComponents/TagRowTruncated/styles.module.scss
+++ b/packages/tag/src/helperComponents/TagRowTruncated/styles.module.scss
@@ -22,7 +22,14 @@ $sizes: 'xs', 's';
 .visibleRow {
   display: flex;
   flex-wrap: wrap;
+
+  width: 100%;
+  min-width: 0;
   max-width: 100%;
+
+  &[data-shrink-first-tag='true'] {
+    flex-wrap: nowrap;
+  }
 
   @each $size in $sizes {
     &[data-size=#{$size}] {
